--- a/_sass/modules/_home.scss
+++ b/_sass/modules/_home.scss
@@ -1,11 +1,21 @@
 #home {
 
+  header {
+    background-color: #333;
+    color: white;
+    margin: -1em -1em 0em;
+    padding: 1.4em 1em 0.4em;
+  }
+  
   h1 {
     text-align: left;
     text-transform: uppercase;
     font-weight: 100;
-    font-size: 19px;
+    font-size: 1.5em;
     color: #444;
+
+    color: white;
+    margin: 0;
 
     span {
       font-weight: 500;
