--- a/_layouts/no_header.html
+++ b/_layouts/no_header.html
@@ -1,7 +1,5 @@
 ---
-layout: base
+layout: default
 ---
 
-<div id="{{ page.id }}" class="content wrap {{ page.class }}">
-  {{ content }}
-</div>
+{{content}}
