--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@ body {
   line-height: 1.6em;
   color: #333;
   background-color: $background-primary;
-  @include container(90%); 
+  // @include container(90%); 
 }
 
 small {
@@ -98,6 +98,11 @@ a, a:visited {
   }
 }
 
+p {
+  margin: 0.5em 0;
+  line-height: 1.4;
+}
+
 /******************************************************************
 H1, H2, H3, H4, H5 STYLES
 ******************************************************************/
@@ -122,10 +127,9 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 2.8em;
-  line-height: 1.1em;
-  // font-family: $h1;
-  text-align: center;
+  font-size: 1.7em;
+  line-height: 1.1;
+  margin: 0.5em 0;
 }
 
 h2 {
@@ -201,4 +205,8 @@ a [class^="icon-"], a [class*=" icon-"] {
 }
 a [class^="icon-"]:hover, a [class*=" icon-"]:hover {
   opacity: 1;
+}
+
+img {
+  max-width: 100%;
 }
