--- a/_sass/modules/_article.scss
+++ b/_sass/modules/_article.scss
@@ -3,37 +3,19 @@ article {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
-
-  .back {
-    display: block;
-    float: left;
-    margin-top: 1em;
-
-    a:hover {
-      text-decoration: none;
-    }
-    i {
-      font-size: 0.9em;
-      padding-right: 0.3em;
-    }
-  }
-
-  .date {
-    float: right;
-  }
-
-  h2 {
-    margin-top: 5px;
-    border-top: 1px solid #eee;
-    padding-top: 1em;
-  }
-
-  h3 {
-    border-top: 1px solid #eee;
-    padding-top: 1em;
-  }
-
-  .byline {
-    text-align: center;
-  }
+}
+article h2 {
+  margin-top: 5px;
+  border-top: 1px solid #eee;
+  padding-top: 1em;
+}
+article h3 {
+  border-top: 1px solid #eee;
+  padding-top: 1em;
+}
+article .attribution {
+  font-size: 0.85em;
+  border-bottom: 1px dashed #999;
+  color: #999;
+  padding-bottom: 0.4em;
 }
