--- a/_includes/future_stories/talk.html
+++ b/_includes/future_stories/talk.html
@@ -1,5 +1,5 @@
 <img class='storyimg' src='/images/{{story.type}}s/{{story.stub}}.png'>
-<h2 class='title'>{{ story.title }}</h2>
+<h2 class='title'><a href='{{story.url}}'>{{ story.title }}</a></h2>
 <h3 class='subtitle'>{{ story.subtitle }}</h3>
 
 <p class='info'>
