More style updateing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,6 +101,7 @@ a, a:visited {
 p {
   margin: 0.5em 0;
   line-height: 1.4;
+  color: $body-text;
 }
 
 /******************************************************************
