--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -1,5 +1,5 @@
 header {
-  background-color: #333;
+  background-color: $header-background;
   color: white;
   padding: 0.5em 0;
 }
@@ -7,8 +7,8 @@ header h1 {
   text-align: left;
   text-transform: uppercase;
   font-weight: 100;
-  font-size: 1.5em;
-  color: white;
+  font-size: 1.6em;
+  opacity: 0.8;
   margin: 0;
 }
 header span {
@@ -17,7 +17,7 @@ header span {
 }
 header a,
 header a:visited {
-  color: white;
+  color: $header-text;
 }
 header a:hover,
 header a:focus,
