--- a/_sass/tools/_utilities.scss
+++ b/_sass/tools/_utilities.scss
@@ -11,7 +11,7 @@
   color: #999;
 }
 .u-inverted {
-  background-color: $main-color;
+  background-color: $background-alt;
 }
 .u-no-bottom-margin {
   margin-bottom: 0;
