--- a/_sass/tools/_settings.scss
+++ b/_sass/tools/_settings.scss
@@ -11,7 +11,8 @@ $serif:             "Georgia", Cambria, Times New Roman, Times, serif;
 */
 $main-color: #193441;
 $secondary-color: #3E606F;
-$tertiary-color: #E74C3C;
+// $tertiary-color: #E74C3C;
+$tertiary-color: #DB4D3E;
 $subtle-color: #FCFAE1;
 $off-white: #FEFEFE;
 
