--- a/_sass/modules/_stories.scss
+++ b/_sass/modules/_stories.scss
@@ -49,7 +49,8 @@ $susy: (
   margin-bottom: 1em;
   overflow: hidden;
   background-color: white;
-  @include border-radius(4px);
+  // @include border-radius(4px);
+  border-top: 8px solid $tertiary-color;
   padding: 14px;
 }
 .story .date {
