--- a/_sass/modules/_stories.scss
+++ b/_sass/modules/_stories.scss
@@ -79,10 +79,9 @@ $susy: (
     border-color: rgb(223, 101, 6);
   }
 }
-.story .subtitle {
-  margin-top: 4px;
+.story-subtitle {
+  margin-top: 5px;
   font-weight: 200;
-  margin-top: 0;
   margin-bottom: 0;
   font-size: 14px;
   line-height: 16px;
@@ -97,12 +96,15 @@ $susy: (
   opacity: 0.6;
   vertical-align: middle;
 }
-.story .storyimg {
+.story-image {
   // position: absolute;
   // top: 0;
   // right: 0;
   // height: 100%;
-  height: 70px;
+  height: 90px;
   float: right;
   margin-top: 7px;
+}
+.talk .info {
+  margin-top: 0.5em;
 }
