--- a/_sass/modules/_mainHeader.scss
+++ b/_sass/modules/_mainHeader.scss
@@ -9,6 +9,9 @@
 .mainHeader-info p {
   font-size: 0.9em;
 }
+.mainHeader-menu {
+  margin-top: 0.1em;
+}
 .mainHeader-menu a,
 .mainHeader-menu a:visited {
   border: 1px solid white;
