--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,14 @@
 ---
 layout: base
 ---
-<header>
+<header class='mainHeader'>
   <div class="u-container">
-    <h1>
-      <a href='/'>Sam<span>Selikoff</span></a>
-    </h1>
+    <div class="mainHeader-info u-pull-left">
+      <h1><a href='/'>Sam<span>Selikoff</span></a></h1>
+    </div>
+    <div class="mainHeader-menu u-pull-right">
+      <a href="#menu">Menu</a>
+    </div>
   </div>
 </header>
 
