--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -25,9 +25,11 @@
 // @import 'modules/resume';
 // @import 'modules/about';
 
+
 @import 'modules/header';
 @import 'modules/container';
 @import 'modules/article';
 @import 'modules/stories';
+@import 'modules/label';
 
 @import 'modules/mainHeader';
