--- a/_sass/tools/_colors.scss
+++ b/_sass/tools/_colors.scss
@@ -1,9 +1,11 @@
 $main-color: #193441;
 $off-main-color: rgb(130, 149, 163);
+$off-main-color-lighter: #CAD1D8;
 $secondary-color: #3E606F;
 // $tertiary-color: #E74C3C;
 $tertiary-color: #DB4D3E;
 $subtle-color: #FCFAE1;
+$really-subtle-color: #768B9A;
 $off-white: #FEFEFE;
 
 $header-background: darken($secondary-color, 9%);
