--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,15 +3,13 @@ layout: base
 ---
 <header class='mainHeader'>
   <div class="u-container">
-    <div class="mainHeader-info u-pull-left">
+    <div class="mainHeader-info">
       <h1><a href='/'>Sam<span>Selikoff</span></a></h1>
-      <p>Front-end web developer</p>
-      <p>Passionate educator</p>
-      <p>Student of economics</p>
+      <p>web development · economics</p>
     </div>
-    <div class="mainHeader-menu u-pull-right">
-      <a href="#menu">Menu</a>
-    </div>
+    <p class='mainHeader-aboutLink'><a href="/about">
+      <span class="u-accent">[</span> about sam <span class="u-accent">]</span>
+    </a></p>
   </div>
 </header>
 
