--- a/_sass/modules/_stories.scss
+++ b/_sass/modules/_stories.scss
@@ -11,7 +11,6 @@ $susy: (
 );
 
 .stories {
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 .stories .upcoming {
@@ -21,7 +20,7 @@ $susy: (
   padding: 4px 7px;
   background-color: white;
 }
-.stories .label {
+.story-label {
   text-transform: uppercase;
   font-size: .6em;
   line-height: 1.3em;
