--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<header class='mainHeader'>
+<header class='mainHeader u-subtle-shadow'>
   <div class="u-container">
     <div class="mainHeader-info u-pull-left">
       <h1><a href='/'>Sam<span>Selikoff</span></a></h1>
