--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<header class='mainHeader'>
+<header class='mainHeader-large u-shadow'>
   <div class="u-container">
     <div class="mainHeader-info">
       <h1><a href='/'>Sam<span>Selikoff</span></a></h1>
@@ -16,3 +16,13 @@ layout: base
 <section class="main">
   {{ content }}
 </section>
+
+<footer>
+  <ul>
+    <li><a href='/blog'>Blog</a></li>
+    <li><a href='/writing'>Writing</a></li>
+    <li><a href='/talks'>Talks</a></li>
+    <li><a href='/work'>Code + design</a></li>
+    <li><a href='/about'>About</a></li>
+  </ul>
+</footer>
