--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -15,7 +15,7 @@
 
 // @import 'layouts/header';
 // @import 'layouts/content';
-// @import 'layouts/footer';
+@import 'layouts/footer';
 
 // @import 'modules/article';
 // @import 'modules/page-header';
