--- a/_sass/modules/_mainHeader.scss
+++ b/_sass/modules/_mainHeader.scss
@@ -1,8 +1,9 @@
 .mainHeader {
-  @include box-shadow(0px 1px 5px 2px rgba(0,0,0,0.5));
-  position: relative;
-  padding: 6em 0 5em;
   text-align: center;
+}
+.mainHeader-large {
+  @extend .mainHeader;
+  padding: 6em 0 5em;
 }
 .mainHeader-info h1 {
   font-size: 1.8em;
