--- a/_sass/tools/_colors.scss
+++ b/_sass/tools/_colors.scss
@@ -7,6 +7,7 @@ $tertiary-color: #DB4D3E;
 $subtle-color: #FCFAE1;
 $really-subtle-color: #768B9A;
 $off-white: #FEFEFE;
+$light-blue: #2980B9;
 
 $header-background: darken($secondary-color, 9%);
 $header-text: $off-white;
