--- a/_sass/tools/_utilities.scss
+++ b/_sass/tools/_utilities.scss
@@ -37,6 +37,13 @@
 .u-padding {
   padding: 1em;
 }
+.u-shadow {
+  @include box-shadow(0px 1px 5px 2px rgba(0,0,0,0.5));
+  position: relative;
+}
+.u-subtle-shadow {
+  @include box-shadow(0px 2px 7px 0 rgba(0,0,0,0.35));
+}
 .u-well {
   border: 1px solid #ddd;
   border-radius: 4px;
