--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: base
       <p>web development · economics</p>
     </div>
     <p class='mainHeader-aboutLink'><a href="/about">
-      <span class="u-accent">[</span> about sam <span class="u-accent">]</span>
+      <span class="u-accent">[</span> about <span class="u-accent">]</span>
     </a></p>
   </div>
 </header>
