--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,11 +18,13 @@ layout: base
 </section>
 
 <footer>
-  <ul>
-    <li><a href='/blog'>Blog</a></li>
-    <li><a href='/writing'>Writing</a></li>
-    <li><a href='/talks'>Talks</a></li>
-    <li><a href='/work'>Code + design</a></li>
-    <li><a href='/about'>About</a></li>
-  </ul>
+  <p>
+    <a href="#"><span class="u-accent">[</span> blog <span class="u-accent">]</span></a>
+    <a href="#"><span class="u-accent">[</span> writing <span class="u-accent">]</span></a>
+    <a href="#"><span class="u-accent">[</span> talks <span class="u-accent">]</span></a>
+  </p>
+  <p>
+    <a href="#"><span class="u-accent">[</span> code + design <span class="u-accent">]</span></a>
+    <a href="#"><span class="u-accent">[</span> about <span class="u-accent">]</span></a>
+  </p>
 </footer>
