--- a/_sass/layouts/_footer.scss
+++ b/_sass/layouts/_footer.scss
@@ -1,5 +1,8 @@
 footer {
   clear: both;
+  background-color: $main-color;
+  // text-align: center;
+  font-size: 1.1em;
 
   ul {
     padding: 0;
@@ -7,15 +10,19 @@ footer {
     list-style-type: none;
   }
 
+  p {
+    margin: 0;
+  }
   a, a:visited {
     display: block;
-    padding: 10px 15px;
-    border-left: 6px solid #DB4D3E;
+    padding: 15px;
+    // border-left: 6px solid #DB4D3E;
     border-bottom: 3px solid #2e4752;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-weight: bold;
     font-size: 0.8em;
     color: #2980B9;
+    color: white;
   }
 
   a:hover, a:visited:hover {
