--- a/_sass/modules/_article.scss
+++ b/_sass/modules/_article.scss
@@ -19,3 +19,12 @@ article .attribution {
   color: #999;
   padding-bottom: 0.4em;
 }
+article aside {
+  margin-left: 1em;
+  font-size: 0.8em;
+  line-height: 1.4em;
+  padding-left: 1em;
+  background-color: whitesmoke;
+  border-radius: 4px;
+  padding: 1em;
+}
