--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,12 +19,22 @@ layout: base
 
 <footer>
   <p>
-    <a href="#"><span class="u-accent">[</span> blog <span class="u-accent">]</span></a>
-    <a href="#"><span class="u-accent">[</span> writing <span class="u-accent">]</span></a>
-    <a href="#"><span class="u-accent">[</span> talks <span class="u-accent">]</span></a>
+    <a class='footer-link' href="#"><span class="u-accent">[</span> blog <span class="u-accent">]</span></a>
+    <a class='footer-link' href="#"><span class="u-accent">[</span> writing <span class="u-accent">]</span></a>
+    <a class='footer-link' href="#"><span class="u-accent">[</span> talks <span class="u-accent">]</span></a>
   </p>
   <p>
-    <a href="#"><span class="u-accent">[</span> code + design <span class="u-accent">]</span></a>
-    <a href="#"><span class="u-accent">[</span> about <span class="u-accent">]</span></a>
+    <a class='footer-link' href="#"><span class="u-accent">[</span> code + design <span class="u-accent">]</span></a>
+    <a class='footer-link' href="#"><span class="u-accent">[</span> about <span class="u-accent">]</span></a>
   </p>
+  <aside>
+    <p class='aside-text u-container'>
+      <span class="aside-info u-pull-left">
+        &copy;2014 Sam Selikoff. <a href="#">Contact me</a> with questions or comments.
+      </span>
+      <span class="aside-social">
+        <a href="http://www.twitter.com/samselikoff"><img src="/images/icons/twitter.png" alt=""></a>
+      </span>
+    </p>
+  </aside>
 </footer>
