Blocky white footer links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,15 +18,18 @@ layout: base
 </section>
 
 <footer>
-  <p>
-    <a class='footer-link' href="#"><span class="u-accent">[</span> blog <span class="u-accent">]</span></a>
-    <a class='footer-link' href="#"><span class="u-accent">[</span> writing <span class="u-accent">]</span></a>
-    <a class='footer-link' href="#"><span class="u-accent">[</span> talks <span class="u-accent">]</span></a>
-  </p>
-  <p>
-    <a class='footer-link' href="#"><span class="u-accent">[</span> code + design <span class="u-accent">]</span></a>
-    <a class='footer-link' href="#"><span class="u-accent">[</span> about <span class="u-accent">]</span></a>
-  </p>
+  <ul>
+    <li><a class='footer-link' href="#"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="#"><span class="u-accent"></span> writing <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="#"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="#"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="#"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
+  </ul>
+  
+  
+  
+  
+  
   <aside>
     <p class='aside-text u-container'>
       <span class="aside-info u-pull-left">
