Working on blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: base
 <header class='mainHeader u-subtle-shadow'>
   <div class="u-container">
     <div class="mainHeader-info u-pull-left">
-      <h1><a href='/'>Sam<span>Selikoff</span></a></h1>
+      <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
     </div>
     <div class="mainHeader-menu u-pull-right">
       <a href="#menu">Menu</a>
