--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,10 @@
 ---
 layout: base
 ---
-<header class='mainHeader-large u-shadow'>
+<header class='mainHeader_large u-shadow'>
   <div class="u-container">
     <div class="mainHeader-info">
-      <h1><a href='/'>Sam<span>Selikoff</span></a></h1>
+      <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
       <p>web development · economics</p>
     </div>
     <p class='mainHeader-aboutLink'><a href="/about">
@@ -19,11 +19,11 @@ layout: base
 
 <footer>
   <ul>
-    <li><a class='footer-link' href="#"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
-    <li><a class='footer-link' href="#"><span class="u-accent"></span> writing <span class="u-accent"></span></a></li>
-    <li><a class='footer-link' href="#"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
-    <li><a class='footer-link' href="#"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
-    <li><a class='footer-link' href="#"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="/writing"><span class="u-accent"></span> writing <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="/talks"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="/projects"><span class="u-accent"></span> code + design <span class="u-accent"></span></a></li>
+    <li><a class='footer-link' href="/about"><span class="u-accent"></span> about <span class="u-accent"></span></a></li>
   </ul>
   
   
