--- a/_sass/layouts/_footer.scss
+++ b/_sass/layouts/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   clear: both;
-  background-color: $main-color;
+  background-color: $darkBlue;
   // text-align: center;
   font-size: 1.1em;
   ul {
