--- a/_sass/modules/_about.scss
+++ b/_sass/modules/_about.scss
@@ -4,13 +4,13 @@
     margin: 30px auto;
   }
 
-  .label.web {color: $main-color;}
+  .label.web {color: $darkBlue;}
   .label.js {color: #E67E22;}
   .label.server {color: #E74C3C;}
 
   .tag {
     border-radius: 3px;
-    background-color: $main-color;
+    background-color: $darkBlue;
     color: #ffffff;
     cursor: default;
     margin-right: 5px;
