--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,7 +25,6 @@ hr {
 
 aside {
 }
-
 pre {
   line-height: 16px;
   font-size: 14px;
@@ -37,7 +36,6 @@ pre {
   padding: 1em;
   box-shadow: 0 0 15px 0px rgba(0,0,0,0.05) inset;
 }
-
 p code, ul code {
   // margin: 0 2px;
   // padding: 0px 5px;
@@ -48,12 +46,10 @@ p code, ul code {
   font-size: 0.8em;
   line-height: 1em;
 }
-
 ul, ol {
   padding-left: 30px;
   list-style-type: initial;
 }
-
 ol {
   list-style-type: decimal;
 }
@@ -103,9 +99,9 @@ H1, H2, H3, H4, H5 STYLES
 ******************************************************************/
 
 h1, h2, h3, h4, h5 {
-  font-family: $sans-serif;
   text-rendering: optimizelegibility;
   font-weight: 500;
+  color: $white;
   /*
   if you're going to use webfonts, be sure to check your weights
   http://css-tricks.com/watch-your-font-weight/
@@ -120,11 +116,16 @@ h1, h2, h3, h4, h5 {
     text-decoration: underline;
   }
 }
-
+h2, h3, h4, h5 {
+  font-family: $sans-serif;
+}
 h1 {
-  font-size: 1.7em;
+  font-size: 1.9em;
   line-height: 1.1;
   margin: 0.5em 0;
+  display: inline-block;
+  padding-bottom: 0.1em;
+  font-family: $serif;
 }
 
 h2 {
