--- a/_sass/modules/_stories.scss
+++ b/_sass/modules/_stories.scss
@@ -49,7 +49,7 @@ $susy: (
   overflow: hidden;
   background-color: white;
   // @include border-radius(4px);
-  border-top: 8px solid $tertiary-color;
+  border-top: 8px solid $red;
   padding: 14px;
 }
 .story .date {
