--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -32,5 +32,6 @@
 @import 'modules/label';
 @import 'modules/listing';
 @import 'modules/title';
+@import 'modules/box';
 
 @import 'modules/mainHeader';
