--- a/_sass/layouts/_footer.scss
+++ b/_sass/layouts/_footer.scss
@@ -15,8 +15,8 @@ footer {
   .footer-link:visited {
     display: block;
     padding: 10px 15px;
-    border-left: 3px solid #DB4D3E;
-    border-bottom: 3px solid #2e4752;
+    border-left: 3px solid $red;
+    border-bottom: 3px solid $blue;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.7em;
