Add link to footer nav

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
-<footer>
+<footer id="menu">
   <ul>
+    <li class="footer-topNavLink"><a href="#top"><span>Top</span></a></li>
     <li><a class='footer-link' href="/blog"><span class="u-accent"></span> blog <span class="u-accent"></span></a></li>
     <li><a class='footer-link' href="/writing"><span class="u-accent"></span> writing <span class="u-accent"></span></a></li>
     <li><a class='footer-link' href="/talks"><span class="u-accent"></span> talks <span class="u-accent"></span></a></li>
