--- a/_sass/layouts/_footer.scss
+++ b/_sass/layouts/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   clear: both;
-  background-color: $darkBlue;
+  background-color: $darkerBlue;
   // text-align: center;
   font-size: 1.1em;
   ul {
@@ -11,12 +11,27 @@ footer {
   p {
     margin: 0;
   }
+  .footer-topNavLink {
+    background-color: #3E606F;
+    text-align: right;
+    padding-right: 1em;
+    padding-bottom: 0.5em;
+    padding-top: 1em;
+    font-size: 0.7em;
+    text-transform: uppercase;
+  }
+  .footer-topNavLink a,
+  .footer-topNavLink a:link,
+  .footer-topNavLink a:visited {
+    color: $white-subtle;
+    text-decoration: none;
+  }
   .footer-link,
   .footer-link:visited {
     display: block;
     padding: 10px 15px;
     border-left: 3px solid $red;
-    border-bottom: 3px solid $blue;
+    border-bottom: 3px solid $darkBlue;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.7em;
