--- a/_sass/tools/_colors.scss
+++ b/_sass/tools/_colors.scss
@@ -10,6 +10,10 @@ $blue-subtle: #637F8C;
 $light-blue: #2980B9;
 
 $red: #DB4D3E;
+$red-subtle: #DB4D3E;
+
+$black: #333;
+$black-subtle: #999;
 
 $white: rgb(250,250,250);
 $white-subtle: rgba($white, 0.5);
