--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,13 +4,15 @@ layout: default
 
 <div id="{{ page.site-section }}" class="u-container">
   <article>
-    <h1>{{ page.title }}
-      <span class="subtitle thin">{{ page.subtitle }}</span>
-    </h1>
-    <p class="attribution" itemscope="" itemtype="http://schema.org/Person">
-      by <a href="/about/" class="u-subtle-link" itemprop="name">Sam Selikoff</a>
-      <span class="u-pull-right">{{ page.date | date: "%B %-d, %Y" }}</span>
-    </p>
+    <div class="article-info">
+      <h1>{{ page.title }}
+        <span class="subtitle thin">{{ page.subtitle }}</span>
+      </h1>
+      <p class="attribution" itemscope="" itemtype="http://schema.org/Person">
+        by <a href="/about/" itemprop="name">Sam Selikoff</a>
+        <span class="u-pull-right">{{ page.date | date: "%B %-d, %Y" }}</span>
+      </p>
+    </div>
 
     {{ content }}
   </article>
