Improve layout classes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   </ul>
 
   <aside>
-    <p class='aside-text u-container'>
+    <p class='aside-text'>
       <span class="aside-info u-pull-left">
         &copy;2014 Sam Selikoff. <a href="#">Contact me</a> with questions or comments.
       </span>
