--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -121,7 +121,7 @@ h2, h3, h4, h5 {
 h1 {
   font-size: 1.9em;
   line-height: 1;
-  margin: 0.5em 0;
+  margin: 0 0 0.3em;
   display: inline-block;
   padding-bottom: 0.1em;
   font-family: $serif;
