Less strong line

--- a/_sass/modules/_article.scss
+++ b/_sass/modules/_article.scss
@@ -9,7 +9,7 @@ article h1 {
   margin-top: 0;
 }
 .article-info {
-  border-bottom: 3px solid $red;
+  border-bottom: 1px dotted #999;
   margin-bottom: 1em;
 }
 article h2 {
